stitch/src/snapshots/stitch__parser__tests__parses_top_level_constant.snap
---
source: stitch/src/parser.rs
expression: "prog(\"let pi = 3.14\")"
---
[
    Const {
        name: "pi",
        mutable: false,
        value: Float(
            3.14,
        ),
    },
]
