stitch/src/snapshots/stitch__parser__tests__parses_top_level_mut_constant.snap
---
source: stitch/src/parser.rs
expression: "prog(\"let mut counter = 0\")"
---
[
    Const {
        name: "counter",
        mutable: true,
        value: Int(
            0,
        ),
        public: false,
    },
]
