stitch/src/snapshots/stitch__parser__tests__parses_try.snap
---
source: stitch/src/parser.rs
expression: "parse(\"x?\")"
---
Try(
    Var(
        "x",
    ),
)
