stitch/src/snapshots/stitch__parser__tests__parses_tuple_type_annotation.snap
---
source: stitch/src/parser.rs
expression: "prog(\"prod Pair(items: (Int, Str))\")"
---
[
    Prod {
        name: "Pair",
        generics: [],
        fields: [
            Field {
                name: Some(
                    "items",
                ),
                mutable: false,
                ty: Tuple(
                    [
                        Name {
                            name: "Int",
                            args: [],
                        },
                        Name {
                            name: "Str",
                            args: [],
                        },
                    ],
                ),
            },
        ],
        public: false,
    },
]
