stitch/src/snapshots/stitch__parser__tests__parses_typed_function.snap
---
source: stitch/src/parser.rs
expression: "prog(\"add(a: Int, b: Int) -> Int = a + b\")"
---
[
    Func {
        name: "add",
        params: [
            Param {
                name: "a",
                ty: Some(
                    Name {
                        name: "Int",
                        args: [],
                    },
                ),
            },
            Param {
                name: "b",
                ty: Some(
                    Name {
                        name: "Int",
                        args: [],
                    },
                ),
            },
        ],
        ret: Some(
            Name {
                name: "Int",
                args: [],
            },
        ),
        uses: [],
        body: Binary {
            op: Add,
            left: Var(
                "a",
            ),
            right: Var(
                "b",
            ),
        },
        public: false,
    },
]
