stitch/src/snapshots/stitch__parser__tests__parses_use_with_binding.snap
---
source: stitch/src/parser.rs
expression: "p(\"{ use r <- each(readings)  emit(r) }\")"
---
Block {
    stmts: [
        Use {
            binding: Some(
                "r",
            ),
            call: Call {
                callee: Var(
                    "each",
                ),
                args: [
                    Arg {
                        label: None,
                        value: Var(
                            "readings",
                        ),
                    },
                ],
            },
        },
    ],
    result: Some(
        Call {
            callee: Var(
                "emit",
            ),
            args: [
                Arg {
                    label: None,
                    value: Var(
                        "r",
                    ),
                },
            ],
        },
    ),
}
