stitch/src/snapshots/stitch__parser__tests__parses_zero_param_lambda.snap
---
source: stitch/src/parser.rs
expression: "p(\"() -> 42\")"
---
Lambda {
    params: [],
    body: Int(
        42,
    ),
}
