stitch/src/snapshots/stitch__parser__tests__pipe_binds_tighter_than_comparison.snap
---
source: stitch/src/parser.rs
expression: "parse(\"x |> f == y\")"
---
Binary {
    op: Eq,
    left: Binary {
        op: Pipe,
        left: Var(
            "x",
        ),
        right: Var(
            "f",
        ),
    },
    right: Var(
        "y",
    ),
}
