stitch/src/snapshots/stitch__parser__tests__pipe_with_call.snap
---
source: stitch/src/parser.rs
expression: "p(\"readings |> filter(p)\")"
---
Binary {
    op: Pipe,
    left: Var(
        "readings",
    ),
    right: Call {
        callee: Var(
            "filter",
        ),
        args: [
            Arg {
                label: None,
                value: Var(
                    "p",
                ),
            },
        ],
    },
}
