stitch/src/snapshots/stitch__parser__tests__placeholder_gap_becomes_an_ignored_param.snap
---
source: stitch/src/parser.rs
expression: "p(\"f($a + $c)\")"
---
Call {
    callee: Var(
        "f",
    ),
    args: [
        Arg {
            label: None,
            value: Binary {
                op: Add,
                left: Placeholder(
                    Some(
                        "a",
                    ),
                ),
                right: Placeholder(
                    Some(
                        "c",
                    ),
                ),
            },
        },
    ],
}
